--- a/package.json
+++ b/package.json
@@ -4,6 +4,15 @@
   "private": false,
   "version": "0.0.6",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RTIInternational/harness-vue-bootstrap.git"
+  },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/RTIInternational/harness-vue-bootstrap/issues"
+  },
+  "homepage": "https://bootstrap.harnessjs.org",
   "main": "./dist/harness-vue-bootstrap.es.js",
   "files": [
     "dist/*"
@@ -13,11 +22,13 @@
     "build": "vite build",
     "preview": "vite preview --port 4173",
     "test:unit": "vitest --environment jsdom",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:serve": "vitepress serve docs"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
-    "@rtidatascience/harness-vue": "^0.1.1",
     "bootstrap": "^4.3.1",
     "bootstrap-icons": "^1.9.1",
     "corejs-typeahead": "^1.3.1",
@@ -25,6 +36,7 @@
     "vue": "^3.2.38"
   },
   "devDependencies": {
+    "@rtidatascience/harness-vue": "^0.2.7",
     "@rushstack/eslint-patch": "^1.1.4",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/eslint-config-prettier": "^7.0.0",
@@ -32,8 +44,10 @@
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.0",
+    "pinia": "^2.0.22",
     "prettier": "^2.7.1",
     "vite": "^3.0.9",
+    "vitepress": "^1.0.0-alpha.13",
     "vitest": "^0.23.0"
   }
 }
