--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/test-utils": "^2.0.2",
+    "chart.js": "^3.9.1",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.0",
@@ -48,6 +49,7 @@
     "prettier": "^2.7.1",
     "vite": "^3.0.9",
     "vitepress": "^1.0.0-alpha.13",
-    "vitest": "^0.23.0"
+    "vitest": "^0.23.0",
+    "vue-chartjs": "^4.1.2"
   }
 }
