--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "docs:serve": "vitepress serve docs"
   },
   "dependencies": {
+    "vue": "^3.2.38",
+    "jquery": "^3.6.1",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^4.3.1",
-    "bootstrap-icons": "^1.9.1",
-    "jquery": "^3.6.1",
-    "vue": "^3.2.38"
+    "bootstrap-icons": "^1.9.1"
   },
   "devDependencies": {
     "@rtidatascience/harness-vue": "^0.2.7",
