--- a/package.json
+++ b/package.json
@@ -27,27 +27,27 @@
     "docs:serve": "vitepress serve docs"
   },
   "dependencies": {
-    "vue": "^3.2.38",
-    "jquery": "^3.6.1",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^4.3.1",
-    "bootstrap-icons": "^1.9.1"
+    "bootstrap-icons": "^1.9.1",
+    "jquery": "^3.6.1",
+    "vue": "^3.2.38"
   },
   "devDependencies": {
-    "@rtidatascience/harness-vue": "^0.2.7",
+    "@rtidatascience/harness-vue": "^1.3.0",
     "@rushstack/eslint-patch": "^1.1.4",
-    "@vitejs/plugin-vue": "^3.0.3",
-    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/test-utils": "^2.0.2",
-    "chart.js": "^3.9.1",
+    "chart.js": "^4.3.2",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
-    "jsdom": "^20.0.0",
+    "jsdom": "^22.1.0",
     "pinia": "^2.0.22",
-    "prettier": "^2.7.1",
-    "vite": "^3.0.9",
+    "prettier": "^3.0.0",
+    "vite": "^4.4.8",
     "vitepress": "^1.0.0-alpha.13",
-    "vitest": "^0.23.0",
-    "vue-chartjs": "^4.1.2"
+    "vitest": "^0.34.0",
+    "vue-chartjs": "^5.2.0"
   }
 }
