--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "pinia": "^2.0.22",
     "prettier": "^3.0.0",
     "vite": "^4.4.8",
-    "vitepress": "^1.0.0-alpha.13",
+    "vitepress": "^1.0.0-rc.12",
     "vitest": "^0.34.0",
     "vue-chartjs": "^5.2.0"
   }
