--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "docs:serve": "vitepress serve docs"
   },
   "dependencies": {
+    "@rtidatascience/harness-vue": "^1.5.1",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.9.1",
+    "vitepress": "^1.0.0-rc.20",
     "vue": "^3.2.38"
   },
   "devDependencies": {
@@ -42,6 +44,7 @@
     "jsdom": "^22.1.0",
     "pinia": "^2.0.22",
     "prettier": "^3.0.0",
+    "sass": "^1.69.1",
     "vite": "^4.4.8",
     "vitest": "^0.34.0",
     "vue-chartjs": "^5.2.0"
