--- a/package.json
+++ b/package.json
@@ -27,26 +27,26 @@
     "docs:serve": "vitepress serve docs"
   },
   "dependencies": {
-    "@rtidatascience/harness-vue": "^1.5.1",
-    "bootstrap": "^5.3.1",
-    "bootstrap-icons": "^1.9.1",
-    "vitepress": "^1.0.0-rc.20",
+    "@rtidatascience/harness-vue": "^1.7.1",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "vitepress": "^1.3.3",
     "vue": "^3.2.38"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.4",
-    "@vitejs/plugin-vue": "^4.2.3",
+    "@rushstack/eslint-patch": "^1.10.4",
+    "@vitejs/plugin-vue": "^4.6.2",
     "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/test-utils": "^2.0.2",
-    "chart.js": "^4.3.2",
-    "eslint": "^8.22.0",
-    "eslint-plugin-vue": "^9.3.0",
+    "@vue/test-utils": "^2.4.6",
+    "chart.js": "^4.4.3",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.27.0",
     "jsdom": "^22.1.0",
-    "pinia": "^2.0.22",
-    "prettier": "^3.0.0",
-    "sass": "^1.69.1",
-    "vite": "^4.4.8",
-    "vitest": "^0.34.0",
-    "vue-chartjs": "^5.2.0"
+    "pinia": "^2.2.2",
+    "prettier": "^3.3.3",
+    "sass": "^1.77.8",
+    "vite": "^4.5.3",
+    "vitest": "^0.34.6",
+    "vue-chartjs": "^5.3.1"
   }
 }
