--- a/package.json
+++ b/package.json
@@ -21,32 +21,31 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 4173",
-    "lint": "eslint . --ext .vue,.js --fix --ignore-path .gitignore",
+    "lint": "eslint . --fix",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:serve": "vitepress serve docs"
   },
   "dependencies": {
-    "@rtidatascience/harness-vue": "^1.7.1",
+    "@rtidatascience/harness-vue": "^1.8.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "vitepress": "^1.3.3",
+    "sass-embedded": "^1.85.0",
+    "vitepress": "^1.6.3",
     "vue": "^3.2.38"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.10.4",
-    "@vitejs/plugin-vue": "^4.6.2",
-    "@vue/eslint-config-prettier": "^8.0.0",
+    "@rushstack/eslint-patch": "^1.10.5",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/test-utils": "^2.4.6",
-    "chart.js": "^4.4.3",
-    "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.27.0",
-    "jsdom": "^22.1.0",
-    "pinia": "^2.2.2",
-    "prettier": "^3.3.3",
-    "sass": "^1.77.8",
-    "vite": "^4.5.3",
-    "vitest": "^0.34.6",
-    "vue-chartjs": "^5.3.1"
+    "chart.js": "^4.4.7",
+    "eslint": "^9.20.1",
+    "eslint-plugin-vue": "^9.32.0",
+    "jsdoc-to-markdown": "^9.1.1",
+    "jsdom": "^26.0.0",
+    "prettier": "^3.5.1",
+    "vite": "^6.1.0",
+    "vue-chartjs": "^5.3.2"
   }
 }
